--- a/2023-11-01/index.html
+++ b/2023-11-01/index.html
@@ -36,4 +36,23 @@
 </html>
 
 <!--html태그는 기본적으로 시작태그와 종료태그로 구성되어있다.
-    html 주석 - 메모, 설명, 코드보관
+    html 주석 - 메모, 설명, 코드보관 
+-->
+
+<!--
+    1. github 로그인 후 code클릭하여 url복사
+    2. 비주얼코드에서 왼쪽바에 있는 소스제어클릭(3번째 아이콘)
+    3. github 다운로드 및 설치
+        (설치시에 반드시 비주얼 코드 선택해야함)
+    4. 설치가 끝나면 비주얼코드에서 f1누르고, gitclone입력하고
+       gitclone 선택하여 복사한 주소 넣고 엔터
+    5. 비주얼코드 메뉴에서 터미널-> 새터미널 선택
+    6. 터미널에
+       git config --global user.email "가입할때입력한 이메일"
+       git config --global user.name "가입할때입력한 이름"
+       입력하고 엔터
+       
+       https://github.com/kyerim1/201apple
+       010-3222-0205
+    
+-->
