--- a/2023-11-01/index.html
+++ b/2023-11-01/index.html
@@ -32,6 +32,27 @@
     제 <sup>뜻을</sup> <s>펼수 없는</s> 사람이 많다. <br>
     내 이를 <u>불쌍히</u> 여겨서 새로 스물 여덟 글자를 만드노니 </p>
 
+    <ul>
+        <li>금주 이벤트 현황</li>
+        <li>당첨자 발표</li>
+        <li>차주 이벤트</li>
+    </ul>
+
+    <ol>
+        <li>html</li>
+        <li>css</li>
+        <li>javascript</li>
+    </ol>
+
+    <dl>
+        <dt>사과</dt>
+        <dd>사과는 맛있지</dd>
+        <dt>딸기</dt>
+        <dd>딸기도 맛있지</dd>
+        <dt>파인애플</dt>
+        <dd>파인애플은 맛없지</dd>
+    </dl>
+
 </body>
 </html>
 
@@ -55,5 +76,4 @@
        https://github.com/kyerim1/201apple
        010-3222-0205
        
-    
 -->
