--- a/2023-11-06/homework.html
+++ b/2023-11-06/homework.html
@@ -15,25 +15,31 @@
             width: 100px;
             height: 50px;
             background: gray;
+            margin-left: 300px;
+
         }
         #div2{
             width: 200px;
-            height: 100px;
+           /* height: 100px; */
             background: dodgerblue;
+            color:white;
             text-align: center;
-            
+            box-sizing: border-box;
+            padding: 25px;
         }
         #div3{
             width: 500px;
             height: 100px;
             background: darkolivegreen;
-        }
+            padding-left: 10px;
+            margin-top: 25px;
+            }
     </style>
 </head>
 <body>
     
     <div id="div1">
-        <div id="divChild1"></div>
+        <div id="div1Child1"></div>
     </div>    
     <div id="div2">
         <h2>div 마스터</h2>
