--- a/2023-11-06/homework.html
+++ b/2023-11-06/homework.html
@@ -25,13 +25,15 @@
             color:white;
             text-align: center;
             box-sizing: border-box;
-            padding: 25px;
+            padding: 25px 0;
         }
         #div3{
             width: 500px;
             height: 100px;
             background: darkolivegreen;
+            box-sizing: border-box;
             padding-left: 10px;
+            padding-top:60px;
             margin-top: 25px;
             }
     </style>
