--- a/2023-11-08/static/div6.html
+++ b/2023-11-08/static/div6.html
@@ -106,9 +106,9 @@
                     height-태그의 높이
                     margin-태그의 바깥쪽 여백
                     padding-태그의 안쪽 여백
-                    background-
-                    border-
-                    box-shadow-
+                    background-태그의 배경 색, 이미지 지정
+                    border-태그의 테두리선
+                    box-shadow-태그의 그림자
                 </pre>
             </div>
         </div>
