--- a/2023-11-09/index.html
+++ b/2023-11-09/index.html
@@ -42,11 +42,11 @@
                 <div class="card"><!-- 카드UI로 구성 -->
                     <div class="build">
                     <h3>빌드 및 테스트</h3>
-                    <img src="" art="test">
+                    <img src="./static/images/card.jpg" art="test">
                 </div>
                 <div class="learn">
                     <h3>학습 및 공유</h3>
-                    <img src="" art="share이미지">
+                    <img src="./static/images/card.jpg" art="share이미지">
                 </div>
             </div>
         </div>
