--- a/11월/2023-11-28/animation.html
+++ b/11월/2023-11-28/animation.html
@@ -74,6 +74,8 @@
             100%{width: 50px; height:200px; top: 150px; opacity: 0.7;}
         }
 
+        <!--나만의 로딩애니메이션 만들기-->
+
     </style>
 
 </head>
