--- a/12월/2023-12-01/freetalk.html
+++ b/12월/2023-12-01/freetalk.html
@@ -11,6 +11,10 @@
     <link rel="icon" href="./static/image/DH-logo.ico">
     <link rel="stylesheet" href="./static/css/default.css">
 
+    <style>
+        
+    </style>
+
 
 </head>
 <body>
@@ -40,7 +44,7 @@
                                 <li class="subItem">
                                     <a href="./freetalk.html">나혼자산다</a>
 
-                                    </li>
+                                </li>
                                 <li class="subItem">혼밥</li>
                                 <li class="subItem">혼술</li>
                             </ul>
