--- a/12월/2023-12-01/freetalk.html
+++ b/12월/2023-12-01/freetalk.html
@@ -10,6 +10,9 @@
 
     <link rel="icon" href="./static/image/DH-logo.ico">
     <link rel="stylesheet" href="./static/css/default.css">
+    <link rel="stylesheet" href="./static/css/freetalk.css">
+
+    <script src="./static/javascript/free.js"> </script>
 
     <style>
         
@@ -78,6 +81,88 @@
                     </ul>
                 </div>
             </div>            
+        </div>
+
+        <div id="main">
+            <div class="boardSearch">
+                <input type="text" name="search">
+                <div class="searchBt"><i class="bi bi-search"></i></div>
+        </div>
+
+        <div id="main">
+            <div class="boardBox">
+                <table class="box">
+                    <tr>
+                        <th>번호</th>
+                        <th>제목</th>
+                        <th>작성자</th>
+                        <th>작성일</th>
+                    </tr>
+                    <tbody class="detail">
+                    <tr>
+                        <td class="numTd">1</td>
+                        <td class="nameTd">마흔에 읽는 쇼펜하우어</td>
+                        <td class="userTd">강용수</td>
+                        <td class="dateTd">23.09.07</td>
+                    </tr>    
+                    <tr>
+                        <td class="numTd">2</td>
+                        <td class="nameTd">트렌드 코리아 2024</td>
+                        <td class="userTd">김난도</td>
+                        <td class="dateTd">23.10.12</td>
+                    </tr>
+                    <tr>
+                        <td class="numTd">3</td>
+                        <td class="nameTd">남에게 보여주려고 인생을 낭비하지 마라</td>
+                        <td class="userTd">쇼펜하우어</td>
+                        <td class="dateTd">23.10.30</td>
+                    </tr>
+                    <tr>
+                        <td class="numTd">4</td>
+                        <td class="nameTd">황현필의 한국사 평생 일력</td>
+                        <td class="userTd">황현필</td>
+                        <td class="dateTd">23.11.11</td>
+                    </tr>
+                    <tr>
+                        <td class="numTd">5</td>
+                        <td class="nameTd">전지적 푸바오 시점</td>
+                        <td class="userTd">송영관</td>
+                        <td class="dateTd">23.11.15</td>
+                    </tr>
+                    <tr>
+                        <td class="numTd">6</td>
+                        <td class="nameTd">퓨처 셀프</td>
+                        <td class="userTd">벤저민 하디</td>
+                        <td class="dateTd">23.08.30</td>
+                    </tr>
+                    <tr>
+                        <td class="numTd">7</td>
+                        <td class="nameTd">말의 진심</td>
+                        <td class="userTd">최정우</td>
+                        <td class="dateTd">23.12.05</td>
+                    </tr>
+                    <tr>
+                        <td class="numTd">8</td>
+                        <td class="nameTd">작별하지 않는다</td>
+                        <td class="userTd">한강</td>
+                        <td class="dateTd">21.09.09</td>
+                    </tr>
+                    <tr>
+                        <td class="numTd">9</td>
+                        <td class="nameTd">시대예보:핵개인의 시대</td>
+                        <td class="userTd">송길영</td>
+                        <td class="dateTd">23.09.25</td>
+                    </tr>
+                    <tr>
+                        <td class="numTd">10</td>
+                        <td class="nameTd">세이노의 가르침</td>
+                        <td class="userTd">세이노</td>
+                        <td class="dateTd">23.03.02</td>
+                    </tr>
+            
+                </tbody>    
+            </table>
+            </div> 
         </div>
 
 </body>
