--- a/12월/2023-12-01/signin.html
+++ b/12월/2023-12-01/signin.html
@@ -98,10 +98,9 @@
                                 <label><i class="bi bi-key"></i></label>
                             </div>
                             <div class="loginBt">
-                                <button type="button">LOGIN</button>
+                                <button type="button" id="signBt">LOGIN</button>
                             </div>
                         </div>
-
                     </form>
                 </div>
                 <div class="memberNav">
@@ -111,5 +110,10 @@
             </div>
         </div>
 
+
+        <div id="footer">
+            <h4>프리덤클럽 Corp.</h4>
+        </div>
+    </div>    
 </body>
 </html>
