--- a/12월/2023-12-12/bluemarble.html
+++ b/12월/2023-12-12/bluemarble.html
@@ -7,6 +7,9 @@
 
 <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
 
+<script src="https://kit.fontawesome.com/a9b3b03cf0.js" crossorigin="anonymous"></script>
+
+
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
 
 <link rel="stylesheet" href="./static/css/board.css">
@@ -21,10 +24,12 @@
 
     <div id="game_player">
         <div id="set_player">
-            <input type="range" min="2" max="5" step="1" id="player_number">
-            <label for="player_number"></label>
+            <div class="pn">
+                <input type="range" min="2" max="5" step="1" id="player_number">
+                <label for="player_number"></label>
+            </div>
+            <button id="enroll">인원설정</button>
         </div>
-        <button id="enroll">인원설정</button>
         <div id="game_state" style="display: none;"> 
 
         </div>
